--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,13 @@ flutter:
   # in this "flutter" section. Each entry in this list should have a
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
+  fonts:
+    - family: Kanit
+      fonts:
+        - asset: assets/fonts/Kanit-Bold.ttf
+        - asset: assets/fonts/Kanit-Italic.ttf
+        - asset: assets/fonts/Kanit-Regular.ttf
+          style: italic
   # example:
   # fonts:
   #   - family: Schyler
